Textarea field line height issue fixed

--- a/src/app/Pages/detail-quote/detail-quote.page.scss
+++ b/src/app/Pages/detail-quote/detail-quote.page.scss
@@ -88,8 +88,8 @@ ion-footer{
       border-radius: 10px 10px 0 0;
       padding: 0 0 0 10px;
       ion-textarea{
-        line-height: 50px;
-        height: 50px;
+        // line-height: 50px;
+        // height: 50px;
       }
     }
     .error-comment{
